using new template for website

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,88 +1,240 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<!DOCTYPE HTML>
+<!--
+	Landed by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <meta content="width=device-width,initial-scale=1" name="viewport">
-    <meta content="description" name="description">
-    <meta name="google" content="notranslate"/>
-    <meta content="Mashup templates have been developped by Orson.io team" name="author">
-
-    <!-- Disable tap highlight on IE -->
-    <meta name="msapplication-tap-highlight" content="no">
-
-    <link rel="apple-touch-icon" sizes="180x180" href="./static/assets/apple-icon-180x180.png">
-    <link href="./static/assets/favicon.ico" rel="icon">
-
-    <title>Title page</title>
-
-    <link href="./static/main.3f6952e4.css" rel="stylesheet">
+    <title>Landed by HTML5 UP</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+    <link rel="stylesheet" href="static/assets/css/main.css"/>
+    <link rel="stylesheet" href="static/assets/css/fontawesome-all.min.css"/>
+    <noscript>
+        <link rel="stylesheet" href="static/assets/css/noscript.css"/>
+    </noscript>
 </head>
+<body class="is-preload landing">
+<div id="page-wrapper">
 
-<body class="minimal">
-<div id="site-border-left"></div>
-<div id="site-border-right"></div>
-<div id="site-border-top"></div>
-<div id="site-border-bottom"></div>
-<!-- Add your content of header -->
-<header>
-    <nav class="navbar  navbar-fixed-top navbar-inverse">
-        <div class="container">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
-                    aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+    <!-- Header -->
+    <header id="header">
+        <h1 id="logo"><a href="index.html">Landed</a></h1>
+        <nav id="nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">CV</a></li>
+                <li>
+                    <a href="#">Layouts</a>
+                    <ul>
+                        <li><a href="left-sidebar.html">Left Sidebar</a></li>
+                        <li><a href="right-sidebar.html">Right Sidebar</a></li>
+                        <li><a href="no-sidebar.html">No Sidebar</a></li>
+                        <li>
+                            <a href="#">Submenu</a>
+                            <ul>
+                                <li><a href="#">Option 1</a></li>
+                                <li><a href="#">Option 2</a></li>
+                                <li><a href="#">Option 3</a></li>
+                                <li><a href="#">Option 4</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li><a href="elements.html">Elements</a></li>
+                <li><a href="#" class="button primary">Projects</a></li>
+            </ul>
+        </nav>
+    </header>
 
-            <div class="collapse navbar-collapse" id="navbar-collapse">
-                <ul class="nav navbar-nav ">
-                    <li><a href="./index.html" title="">01 : Home</a></li>
-                    <li><a href="./works.html" title="">02 : Works</a></li>
-                    <li><a href="./about.html" title="">03 : About me</a></li>
-                    <li><a href="./contact.html" title="">04 : Contact</a></li>
-                    <li><a href="./components.html" title="">05 : Components</a></li>
+    <!-- Banner -->
+    <section id="banner">
+        <div class="content">
+            <header>
+                <h2>Kostadin Devedzhiev</h2>
+                <h3>AI Research Assistant</h3>
+                <ul class="icons">
+                    {#                    <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>#}
+                    {#                    <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>#}
+                    <li><a href="https://github.com/kostadindev" target="_blank" class="icon brands alt fa-github"><span
+                            class="label">GitHub</span></a>
+                    </li>
+                    <li><a href="https://www.linkedin.com/in/kostadin-devedzhiev-472a26170/" target="_blank"
+                           class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://www.instagram.com/kostadin.devedzhiev/?hl=en" target="_blank"
+                           class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+                    <li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
                 </ul>
-
-
-            </div>
+            </header>
+            <span class="image"><img src="static/images/profile-pic.jpg" alt=""/></span>
         </div>
-    </nav>
-</header>
-<!-- Add your site or app content here -->
-<div class="hero-full-container background-image-container white-text-container"
-     style="background-image: url('./static/assets/images/space.jpg')">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="hero-full-wrapper">
-                    <div class="text-content">
-                        <h1>Hello,<br>
-                            <span id="typed-strings">
-                  <span>I'm James Dean</span>
-                  <span>French Designer</span>
-                  <span>Working as a Freelance</span>
-                </span>
-                            <span id="typed"></span>
-                        </h1>
+        <a href="#one" class="goto-next scrolly">Next</a>
+    </section>
+
+    <!-- One -->
+    <section id="one" class="spotlight style1 bottom">
+        <span class="image fit main"><img src="static/images/mauna-kea.jpg" alt=""/></span>
+        <div class="content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 col-12-medium">
+                        <h2> Quick Bio </h2>
+                        <p>I am a junior student at Stony Brook
+                            University. I double major in Computer Science and Applied Mathematics &
+                            Statistics with a concentration in Artificial Intelligence and Data Science.</p>
+                    </div>
+                    <div class="col-4 col-12-medium">
+                        <p> My research
+                            interests lie in artificial intelligence and scientific computing. More specifically, I
+                            have done work in computer vision (CV), deep learning (DL), human-computer interaction
+                            (HCI), and computational physics. In the future, I am eager to learn more about
+                            robotics, reinforcement learning (RL), and quantum computing.</p>
+                    </div>
+                    <div class="col-4 col-12-medium">
+                        <p>Currently, I am working on a research project about human-in-the-loop AI with Dr. Travis
+                            Mandel. You can see more about this
+                            project and other recent works below or in <a>projects.</a></p>
+                        <p>
+                            The amazing picture in the back was taken at Mauna Kea, Hawaii by .
+                            <a href='https://unsplash.com/@zmart'>Martin Zangerl</a></p>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+        <a href="#two" class="goto-next scrolly">Next</a>
+    </section>
+
+    <!-- Two -->
+    <section id="two" class="spotlight style2 right">
+        <span class="image fit main"><img src="static/images/interactive-annotator.png" alt=""/></span>
+        <div class="content">
+            <header>
+                <h2>Interdum amet non magna accumsan</h2>
+                <p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+            </header>
+            <p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing.
+                Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat
+                adipiscing lorem.</p>
+            <ul class="actions">
+                <li><a href="#" class="button">Learn More</a></li>
+            </ul>
+        </div>
+        <a href="#three" class="goto-next scrolly">Next</a>
+    </section>
+
+    <!-- Three -->
+    <section id="three" class="spotlight style3 left">
+        <span class="image fit main bottom"><img src="static/images/ellipses.png" alt=""/></span>
+        <div class="content">
+            <header>
+                <h2>Interdum felis blandit praesent sed augue</h2>
+                <p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+            </header>
+            <p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing.
+                Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat
+                adipiscing lorem.</p>
+            <ul class="actions">
+                <li><a href="#" class="button">Learn More</a></li>
+            </ul>
+        </div>
+        <a href="#four" class="goto-next scrolly">Next</a>
+    </section>
+
+    <!-- Four -->
+    <section id="four" class="wrapper style1 special fade-up">
+        <div class="container">
+            <header class="major">
+                <h2>Other recent work</h2>
+                <p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+            </header>
+            <div class="box alt">
+                <div class="row gtr-uniform">
+                    <section class="col-4 col-6-medium col-12-xsmall">
+                        <span class="icon solid alt major fa-chart-area"></span>
+                        <h3>Ipsum sed commodo</h3>
+                        <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+                    </section>
+                    <section class="col-4 col-6-medium col-12-xsmall">
+                        <span class="icon solid alt major fa-comment"></span>
+                        <h3>Eleifend lorem ornare</h3>
+                        <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+                    </section>
+                    <section class="col-4 col-6-medium col-12-xsmall">
+                        <span class="icon solid alt major fa-flask"></span>
+                        <h3>Cubilia cep lobortis</h3>
+                        <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+                    </section>
+                    <section class="col-4 col-6-medium col-12-xsmall">
+                        <span class="icon solid alt major fa-paper-plane"></span>
+                        <h3>Non semper interdum</h3>
+                        <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+                    </section>
+                    <section class="col-4 col-6-medium col-12-xsmall">
+                        <span class="icon solid alt major fa-file"></span>
+                        <h3>Odio laoreet accumsan</h3>
+                        <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+                    </section>
+                    <section class="col-4 col-6-medium col-12-xsmall">
+                        <span class="icon solid alt major fa-lock"></span>
+                        <h3>Massa arcu accumsan</h3>
+                        <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+                    </section>
+                </div>
+            </div>
+            <footer class="major">
+                <ul class="actions special">
+                    <li><a href="#" class="button">Magna sed feugiat</a></li>
+                </ul>
+            </footer>
+        </div>
+    </section>
+
+    <!-- Five -->
+    <section id="five" class="wrapper style2 special fade">
+        <div class="container">
+            <header>
+                <h2>Magna faucibus lorem diam</h2>
+                <p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+            </header>
+            <form method="post" action="#" class="cta">
+                <div class="row gtr-uniform gtr-50">
+                    <div class="col-8 col-12-xsmall"><input type="email" name="email" id="email"
+                                                            placeholder="Your Email Address"/></div>
+                    <div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary"/>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer id="footer">
+        <ul class="icons">
+            <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+            <li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+            <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+            <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+            <li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+        </ul>
+        <ul class="copyright">
+            <li>&copy; Untitled. All rights reserved.</li>
+            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        </ul>
+    </footer>
+
 </div>
 
-<script>
-    document.addEventListener("DOMContentLoaded", function (event) {
-        type();
-        movingBackgroundImage();
-    });
-</script>
+<!-- Scripts -->
+<script src="static/assets/js/jquery.min.js"></script>
+<script src="static/assets/js/jquery.scrolly.min.js"></script>
+<script src="static/assets/js/jquery.dropotron.min.js"></script>
+<script src="static/assets/js/jquery.scrollex.min.js"></script>
+<script src="static/assets/js/browser.min.js"></script>
+<script src="static/assets/js/breakpoints.min.js"></script>
+<script src="static/assets/js/util.js"></script>
+<script src="static/assets/js/main.js"></script>
 
-
-<script type="text/javascript" src="./static/main.70a66962.js"></script>
 </body>
-
 </html>
