--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -1,4 +1,3 @@
-@import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,100italic,300italic");
 
 /*
@@ -112,7 +111,6 @@ a {
     -webkit-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
     -ms-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
     transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
-    border-bottom: dotted 1px;
     color: #e44c65;
     text-decoration: none;
 }
@@ -2878,7 +2876,6 @@ input[type="submit"].fit,
 input[type="reset"].fit,
 input[type="button"].fit,
 .button.fit {
-    width: 100%;
 }
 
 input[type="submit"].small,
@@ -2902,6 +2899,8 @@ input[type="button"].primary,
     background-color: #e44c65;
     box-shadow: none;
     color: #ffffff !important;
+    padding-right: 8px;
+    padding-left: 8px;
 }
 
 input[type="submit"].primary:hover,
@@ -4084,7 +4083,8 @@ body.is-touch #banner {
 
 }
 
-.socials {
-    background-color: white;
-    opacity: 0.5;
+
+.socials  a{
+    color:white;
 }
+
